# OncAi

./: .env.example  .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  oncai.example.yaml  pyproject.toml
.agents/skills/new-fc-workflow/: SKILL.md
.claude/skills/new-fc-workflow/: SKILL.md
.github/workflows/: build.yml  ci.yml
apps/oncai-review/: .prettierignore  README.md  package-lock.json  package.json  pyproject.toml  server.py
apps/oncai-review/assets/: icon.icns
apps/oncai-review/docs/: CHANGELOG.md  DESIGN.md
apps/oncai-review/examples/: demo.review_pkg.json
apps/oncai-review/scripts/: build-macos-app.sh
apps/oncai-review/web/: app.test.js  style.css
apps/review_app/: .gitignore  Makefile  README.md  eslint.config.js  pyproject.toml  server.py
apps/review_app/.github/workflows/: build.yml  ci.yml
apps/review_app/docs/: CHANGELOG.md  DESIGN.md  RUNNING-ON-MAC.md
apps/review_app/tests/: test_server.py
apps/review_app/web/: app.js  index.html  style.css
docs/: architecture.md  blog_draft_remaining_sections.md  blog_draft_technical_sections.md  blog_outline_what_i_didnt_use.md  design.md  incremental_extraction.md  review_system.md  tombstones.md
docs/examples/: ihc_gold_reshape.sql
src/oncai/: __init__.py  adjudication.py  cohort.py  config.py  db.py  hashing.py  ingest.py  lake.py  lake_check.py  runs.py  sidecar.py  tombstones.py
src/oncai/cli/: __init__.py  _shared.py  adjudication_cmds.py  cohort_cmds.py  db_cmds.py  fc_cmds.py  main_cmds.py  runs_cmds.py
src/oncai/fc_extraction/: __init__.py  batch_single.py  client.py  enum_helpers.py  load.py  manifest.py  models.py  tools.py
src/oncai/fc_extraction/definitions/: __init__.py  example.py  path_kidney_basic.py  path_kidney_ihc.py  path_kidney_nephrectomy.py  path_kidney_proc_site_hist.py
src/oncai/review/: __init__.py  load.py  notes.py  package.py  schema.py  select.py  slots.py
src/oncai/schemas/: __init__.py  pathology.py
src/oncai/transforms/: __init__.py  collate.py  passthrough.py
tests/: conftest.py
tests/e2e/: test_pipeline_roundtrip.py
tests/fixtures/: sample_pathology.csv
tests/unit/: test_adjudication.py  test_cli_shared.py  test_cohort.py  test_collate.py  test_config.py  test_db.py  test_fc_cmds.py  test_fc_segments.py  test_fc_tools.py  test_hashing.py  test_ingest_replay.py  test_lake_check.py  test_lake_merge.py  test_lake_sync.py  test_passthrough.py  test_review.py  test_review_load.py  test_review_select.py  test_runs.py  test_schema_registry.py  test_sidecar.py  test_tombstones.py
